# nsdf-storage-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  local-conf.json  local-docker-conf.json  pyproject.toml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: publish-release-ghcr.yaml
client/: pyproject.toml
client/src/nsdf_storage_client/: cli.py
src/nsdf_storage_service/: __init__.py  cli.py  config.py  data_models.py  endpoints.py  listener.py  s3_uploader.py  service.py
tests/: test_config.py  test_data_models.py  test_listener.py  test_service.py
