[project]
name = "nsdf-storage-client"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "intersect_sdk[amqp]>=0.9.0,<0.10.0",
]

[project.scripts]
nsdf-storage-client = "nsdf_storage_client.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nsdf_storage_client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
